# opaque_typedef

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  configs.cmake
arrtest/: arrtest.hpp  compare.hpp  compare.test.cpp  evaluator.hpp  evaluator.test.cpp  ostreamable.hpp  result_counter.hpp  result_reporter.hpp  result_reporter.test.cpp  test.hpp  test_context.hpp  test_context.test.cpp  tests.hpp  type_name.hpp  type_name.test.cpp
example/: demo_numeric_typedef.cpp  tutorial.cpp
opaque/: binop_function.hpp  binop_function.test.cpp  binop_inherit.hpp  binop_inherit.test.cpp  binop_overload.hpp  binop_overload.test.cpp  convert.hpp  convert.test.cpp  hash.hpp  hash.test.cpp  inconvertibool.hpp  inconvertibool.test.cpp  numeric_typedef.hpp  numeric_typedef.test.cpp  ostream.hpp  ostream.test.cpp  position_typedef.hpp  safer_string_typedef.hpp  safer_string_typedef.test.cpp  storage.hpp  storage.test.cpp  string_typedef.hpp  string_typedef.test.cpp  tracing_base.test.hpp  type_traits.hpp
